fix: fixed buttons overlap with header sometimes

--- a/docs/web/src/sections/header/header.module.css
+++ b/docs/web/src/sections/header/header.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-between;
     position: fixed;
+    z-index: 1000;
     width: 100%;
     background-color: var(--color-primary);
 
